🐛 Fix recruitment gap

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -54,7 +54,7 @@ $gap: 1vw;
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 0.5vw;
+            gap: $gap;
             &-img {height: 8vh;}
             &-text {width: 53ch;}
         }
